Can add, view songs

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,5 @@
 <h1>Home Page</h1>
 
-<h2><a href = "/songs/index">View all songs</a>
+<h2><a href = "/songs">View all songs</a>
 
 <h2><a href = "/songs/new">Add a new song</a>
