--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,23 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!--
-    normalize.css removes cross-browser differences in defaults, e.g.,
-    differences in how form elements appear between Firefox and IE
-    See: http://necolas.github.com/normalize.css/
-  -->
-  <link rel="stylesheet" href="/stylesheets/normalize.css">
-  <!--
-    application.css is where you put your styles
-  -->
-  <link rel="stylesheet" href="/stylesheets/application.css">
-
+  <meta charset="utf-8">
+  <title>LH Music Wall</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../../bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../../bootstrap/css/bootstrap-theme.min.css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="/javascript/application.js"></script>
-
-  <title></title>
+  
+  <style type="text/css">
+      .border{
+        margin: 20px;
+      }
+  </style>
 </head>
 <body>
-  <%= yield %>
+  <div class="container-fluid">
+      <nav role="navigation" class="navbar navbar-inverse">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+          <button type="button" data-target=".navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>
+      </div>
+      <!-- Collection of nav links and other content for toggling -->
+      <div class="collapse navbar-collapse navbarCollapse">
+          <ul class="nav navbar-nav">
+              <li><a href="/">Home</a></li>
+              <li><a href="/songs">Songs</a></li>
+              <li><a href="/songs/song_new">Add Song</a></li>
+              <li><a href="#">Profile</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+              <li><a href="#">Login</a></li>
+          </ul>
+      </div>
+    </nav>
+  </div>
+  <div class="border">
+    <%= yield %>
+    <script src="../../bootstrap/js/bootstrap.min.js"></script>
+    <script src="../../javascript//application.js"></script>
+  </div>
 </body>
 </html>
