--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,32 +15,8 @@
   </style>
 </head>
 <body>
-  <div class="container-fluid">
-      <nav role="navigation" class="navbar navbar-inverse">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-          <button type="button" data-target=".navbarCollapse" data-toggle="collapse" class="navbar-toggle">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-          </button>
-      </div>
-      <!-- Collection of nav links and other content for toggling -->
-      <div class="collapse navbar-collapse navbarCollapse">
-          <ul class="nav navbar-nav">
-              <li><a href="/">Home</a></li>
-              <li><a href="/songs">Songs</a></li>
-              <li><a href="/songs/song_new">Add Song</a></li>
-              <li><a href="#">Profile</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Login</a></li>
-          </ul>
-      </div>
-    </nav>
-  </div>
   <div class="border">
+    <%= erb :'navbar' %>
     <%= yield %>
     <script src="../../bootstrap/js/bootstrap.min.js"></script>
     <script src="../../javascript//application.js"></script>
