--- a/app/views/navbar.erb
+++ b/app/views/navbar.erb
@@ -16,6 +16,14 @@
               <% if current_user %>
                 <li><a href="/songs">Songs</a></li>
                 <li><a href="/songs/song_new">Add Song</a></li>
+                <!--
+                <form role="search" class="navbar-form navbar-left" action='/songs/song_show'>
+                  <div class="collapse navbar-collapse navbarCollapse">
+                    <input type="text" placeholder="Search Songs" class="form-control">
+                    <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                  </div>
+                </form>
+                -->
               <% else %>
                 <li><a href="/users/user_login">Songs</a></li>
                 <li><a href="/users/user_login">Add Song</a></li>
