--- a/app/views/songs/song_index.erb
+++ b/app/views/songs/song_index.erb
@@ -4,17 +4,18 @@
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>#</th>
+      <th>Votes</th>
       <th>Song Title</th>
       <th>Added By</th>
       <th>link</th>
       <th>Added Date</th>
+      <th>Upvote!</th>
     </tr>
   </thead>
   <tbody>
     <% @songs.each do |song| %>
       <tr>
-        <td><%= song.id %></td>
+        <td><%= song.votes.count %></td>
         <td><%= song.title %></td>
         <td><%= song.user.name %></td>
         <td>
@@ -25,6 +26,18 @@
         <% end %>
         </td>
         <td><%= song.created_at %></td>
+        <td>
+        <% if Vote.where(user_id: current_user.id, song_id: song.id).count > 0 %>
+          Voted!
+        <% else %>
+        <form method="post" action="/vote">
+          <input type="hidden" name="song_id" value="<%=song.id%>">
+          <button type="submit" class="btn btn-default">
+            <span class="glyphicon glyphicon-thumbs-up"></span>
+          </button>
+        </form>
+        <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
