--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,10 +4,16 @@
   <meta charset="utf-8">
   <title>LH Music Wall</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../../stylesheets/application.css">
   <link rel="stylesheet" href="../../bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="../../bootstrap/css/bootstrap-theme.min.css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  
+  <style>
+    html {background: transparent;}
+    body {background: url(/images/background.jpg);
+          background-attachment: fixed;
+          color: white;}
+  </style>
   <style type="text/css">
       .border{
         margin: 20px;
@@ -15,8 +21,8 @@
   </style>
 </head>
 <body>
+  <%= erb :'navbar' %>
   <div class="border">
-    <%= erb :'navbar' %>
     <%= yield %>
     <script src="../../bootstrap/js/bootstrap.min.js"></script>
     <script src="../../javascript//application.js"></script>
