Added rating feature.

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="../../stylesheets/application.css">
   <link rel="stylesheet" href="../../bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="../../bootstrap/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="../../stylesheets/star-rating.min.css">
+
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <style>
     html {background: transparent;}
@@ -25,7 +27,9 @@
   <div class="border">
     <%= yield %>
     <script src="../../bootstrap/js/bootstrap.min.js"></script>
-    <script src="../../javascript//application.js"></script>
+    <script src="../../javascript/application.js"></script>
+    <script src="../../javascript/star-rating.min.js"></script>
+    <script src="../../javascript/star-rating.min.js"></script>
   </div>
 </body>
 </html>
