--- a/app/views/songs/index.erb
+++ b/app/views/songs/index.erb
@@ -15,7 +15,7 @@
   </thead>
   <tbody style="color:Grey">
     <% @songs.each do |song| %>
-      <tr id="song_detail">
+      <tr id="detail">
           <td><%= song.votes.count %></td>
           <td><%= song.title %></td>
           <td><%= song.user.name %></td>
