--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -11,7 +11,7 @@
         <input type="password" class="form-control" name="password" placeholder="Password" value="<%= @user && @user.password %>" required>
     </div>
     <button type="submit" class="btn btn-primary">Login</button>
-    <button class="btn"><a href="/users/user_signup" style="text-decoration:none">Sign Up</a></button>
+    <button class="btn"><a href="/users/signup" style="text-decoration:none">Sign Up</a></button>
   </form>
 <% else %>
   <h1>Logout</h1>
