--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,7 +1,7 @@
 <h1>Signup</h1>
 <hr/>
 
-<form class="form-horizontal" action="/signup" method="POST">
+<form class="form-login" action="/signup" method="POST">
   <% if @user && @user.errors.any? %>
     <div>
       <strong>Please fix the following issues:</strong>
